k8s/manifests/jorryt-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jorryt-site
  namespace: jorryt-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jorryt-site
  template:
    metadata:
      labels:
        app: jorryt-site
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: jorryt-site
          image: ghcr.io/abelmeijberg/jorryt-site:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
