k8s/manifests/jorryt-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jorryt-site
  namespace: jorryt-site
spec:
  type: ClusterIP
  selector:
    app: jorryt-site
  ports:
    - port: 80
      targetPort: 8080
